--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "dev": "vue-devtools"
   },
   "dependencies": {
-    "vuex": "^3.1.1",
+    "nativescript-gradient": "^2.0.1",
+    "nativescript-toast": "^2.0.0",
     "nativescript-vue": "^2.4.0",
-    "tns-core-modules": "^6.0.0"
+    "tns-core-modules": "^6.0.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
